Refactor FhirEndpoint to ProfileEndpoint
* It may not be FHIR; "Profile" is more generic
* Allow organization not to have a profile_endpoint; this isn't necessary
  for sandbox env
* Add tests

--- a/dpc-web/app/views/internal/organizations/_fields.html.erb
+++ b/dpc-web/app/views/internal/organizations/_fields.html.erb
@@ -56,13 +56,13 @@
 </div>
 
 <div>
-  <h2>FHIR Endpoint</h2>
-  <%= f.fields_for :fhir_endpoint do |ff| %>
+  <h2>Profile Endpoint</h2>
+  <%= f.fields_for :profile_endpoint do |ff| %>
     <%= ff.label :connection_type, class: "ds-c-label" %>
-    <%= ff.select :connection_type, connection_types_for_select, class: "ds-c-field" %>
+    <%= ff.select :connection_type, connection_types_for_select, include_blank: true, class: "ds-c-field" %>
 
     <%= ff.label :status, class: "ds-c-label" %>
-    <%= ff.select :status, statuses_for_select, class: "ds-c-field" %>
+    <%= ff.select :status, statuses_for_select, include_blank: true, class: "ds-c-field" %>
 
     <%= ff.label :name, class: "ds-c-label" %>
     <%= ff.text_field :name, class: "ds-c-field" %>
