--- a/dpc-web/app/views/internal/organizations/show.html.erb
+++ b/dpc-web/app/views/internal/organizations/show.html.erb
@@ -84,19 +84,23 @@
 
 <section class="box">
     <div class="box__content">
-      <h2 class="box__heading">FHIR Endpoint(s)</h2>
-      <div class="ds-u-margin-bottom--1">
-        Name: <%= @organization.fhir_endpoint.name %>
-      </div>
-      <div class="ds-u-margin-bottom--1">
-        URI: <%= @organization.fhir_endpoint.uri %>
-      </div>
-      <div class="ds-u-margin-bottom--1">
-        Connection Type: <%= @organization.fhir_endpoint.connection_type %>
-      </div>
-      <div class="ds-u-margin-bottom--1">
-        Status: <%= @organization.fhir_endpoint.status %>
-      </div>
+      <h2 class="box__heading">Profile Endpoint</h2>
+      <% if @organization.profile_endpoint %>
+        <div class="ds-u-margin-bottom--1">
+          Name: <%= @organization.profile_endpoint.name %>
+        </div>
+        <div class="ds-u-margin-bottom--1">
+          URI: <%= @organization.profile_endpoint.uri %>
+        </div>
+        <div class="ds-u-margin-bottom--1">
+          Connection Type: <%= @organization.profile_endpoint.connection_type.titleize %>
+        </div>
+        <div class="ds-u-margin-bottom--1">
+          Status: <%= @organization.profile_endpoint.status.titleize %>
+        </div>
+      <% else %>
+      <p>None provided.</p>
+      <% end %>
     </div>
 <div>
 
