WIP Add API call for orgs

--- a/dpc-web/app/views/internal/organizations/show.html.erb
+++ b/dpc-web/app/views/internal/organizations/show.html.erb
@@ -58,10 +58,10 @@
     <div class="box__content">
       <h2 class="box__heading">Address</h2>
       <div>
-        Use: <%= @organization.address.address_use.titleize %>
+        Use: <%= @organization.address_use.titleize %>
       </div>
       <div>
-        Type: <%= @organization.address.address_type.titleize %>
+        Type: <%= @organization.address_type.titleize %>
       </div>
       <div>
         <%= @organization.address_street %>
