cleanup layout and views

--- a/dpc-web/app/views/pages/support.html.erb
+++ b/dpc-web/app/views/pages/support.html.erb
@@ -1,17 +1,33 @@
 <% title "Support" %>
 
+<h1 class="ds-u-font-size--title ds-u-font-weight--normal ds-u-margin--0">Support</h1>
 
-<div class="ds-u-measure--wide">
-<h2>Join the Google Group</h2>
 
-<p>The Data at the Point of Care (DPC) Google Group is the best place to get your questions answered by the DPC team. In this community you can sign up for feedback session opportunities, get answers to your questions, share your feedback and ideas, and get updates on the project.</p>
+<section class="box">
+  <div class="box__content">
+    <div class="ds-u-measure--wide">
+      <h2 class="box__heading">Join the Google Group</h2>
 
-<div class="ds-u-margin-top--5">
-  <a href="https://groups.google.com/d/forum/dpc-api" class="ds-c-button ds-c-button--big">Join Google group</a>
-</div>
+      <p>The Data at the Point of Care (DPC) Google Group is the best place to get your questions answered by the DPC team. In this community you can sign up for feedback session opportunities, get answers to your questions, share your feedback and ideas, and get updates on the project.</p>
 
-<h2 class="ds-u-margin-top--7">Have other questions?</h2>
+      <div class="ds-u-margin-top--5">
+        <a href="https://groups.google.com/d/forum/dpc-api" class="ds-c-button ds-c-button--big">Join Google group</a>
+      </div>
+    </div>
+  </div>
+</section>
 
-<p>Check out <%= link_to "frequently asked questions", faq_path %>.</p>
+<section class="box">
+  <div class="box__content">
+    <div class="ds-u-measure--wide">
+      <h2 class="box__heading">Have other questions?</h2>
 
-</div>
+      <p>Check out <%= link_to "frequently asked questions", faq_path %>.</p>
+    </div>
+  </div>
+</section>
+
+<h2 class="ds-u-margin-top--7"></h2>
+
+
+
