--- a/dpc-web/app/views/pages/terms_of_service.html.erb
+++ b/dpc-web/app/views/pages/terms_of_service.html.erb
@@ -1,6 +1,13 @@
 <% title "Terms of service" %>
 <% meta_tag :description, "Terms of service for the Data at the Point of Care pilot" %>
 
-<div class="ds-u-measure--wide">
-  <%= raw(@html_content) %>
-</div>
+<h1 class="ds-u-font-size--title ds-u-font-weight--normal ds-u-margin--0">Terms of service</h1>
+
+<section class="box">
+  <div class="box__content">
+    <div class="ds-u-measure--wide">
+      <%= raw(@html_content) %>
+    </div>
+  </div>
+</section>
+
