--- a/dpc-web/app/assets/stylesheets/components/_site-blocks.scss
+++ b/dpc-web/app/assets/stylesheets/components/_site-blocks.scss
@@ -73,7 +73,7 @@
 }
 
 .dashboard-grid__content {
-  background: $color-gray-lightest;
+  background: $color-white;
   border: 1px solid $color-gray-lighter;
   border-radius: 3px;
   height: 100%;
