--- a/dpc-web/app/views/layouts/application.html.erb
+++ b/dpc-web/app/views/layouts/application.html.erb
@@ -3,13 +3,11 @@
 
   <%= render partial: 'shared/head' %>
 
-  <body class="ds-base <% if internal_page? %>ds-u-fill--gray-ultra-light<% end %>">
+  <body class="ds-base ds-u-fill--gray-ultra-light <% if content_for?(:banner_title) %>ds-u-fill--white<% end %>">
     <!-- nav -->
     <%= render partial: 'shared/navbar' %>
 
-    <% if internal_page? %>
-    <div class="header-seperator"></div>
-    <% else %>
+    <% if content_for?(:banner_title) %>
     <header class="page-header">
       <div class="ds-l-container">
         <h1 class="page-header__heading">
@@ -18,14 +16,17 @@
         <%= render :partial =>  yield(:tabs_set) rescue nil %>
       </div>
     </header>
+    <% else %>
+    <div class="header-seperator"></div>
     <% end %>
+
 
 
 
     <%= render partial: 'shared/alerts', locals: { notice: flash[:notice], alert: flash[:alert] } %>
 
     <!-- content -->
-    <section class="ds-l-container ds-u-padding-top--7 ds-u-margin-bottom--7 <% if internal_page? %>ds-u-max-width--none<% end %>" id="main">
+    <section class="ds-l-container ds-u-padding-top--7 ds-u-margin-bottom--7" id="main">
       <%= yield %>
     </section>
 
