Save one RegisteredOrganization per API env
* Use raw html for checkboxes instead of Rails form helpers because
  Rails was being annoying about the array virtual attribute for
  api_environments
* Initiate API calls from virtual attribute in Organization model for
  seamless flow from UIs or Rails console input
* Save one RegisteredOrganization record per API environment that the
  organization has enabled, because we need to store that record's ID
  that gets returned from the API call, and the ID may not be the same
  in each env.

--- a/dpc-web/app/views/internal/organizations/_fields.html.erb
+++ b/dpc-web/app/views/internal/organizations/_fields.html.erb
@@ -67,12 +67,18 @@
 
   <div class="ds-l-col--12 ds-l-md-col--9 field-group__fields">
     <span class="ds-c-field__hint">Select all that apply. Unselecting all will remove all env access for organization.</span>
-    <%= f.collection_check_boxes(:api_environments, Organization::API_ENVIRONMENTS, :first, :second) do |b| %>
-      <span>
-        <%= b.check_box(class: 'ds-c-choice') %>
-        <%= b.label %>
-      </span>
-    <% end %>
+
+    <input name="organization[api_environments][]" value="" hidden>
+
+    <span>
+      <input id="organization_api_environments_sandbox" name="organization[api_environments][]" type="checkbox" value="sandbox" class="ds-c-choice" <%= "checked" if @organization.sandbox_enabled? %> >
+      <label for="organization_api_environments_sandbox">Sandbox</label>
+    </span>
+
+    <span>
+      <input id="organization_api_environments_production" name="organization[api_environments][]" type="checkbox" class="ds-c-choice" disabled>
+      <label for="organization_api_environments_production">Production</label>
+    </span>
   </div>
 </fieldset>
 
