--- a/dpc-web/app/views/internal/organizations/show.html.erb
+++ b/dpc-web/app/views/internal/organizations/show.html.erb
@@ -25,7 +25,7 @@
         <svg class="icon ds-u-margin-right--1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <use xlink:href="/assets/solid.svg#database"></use>
         </svg>
-        <%= Organization::API_ENVIRONMENTS[api_env] %>
+        <%= api_env.titleize %>
       <% end %>
     </div>
   </section>
