--- a/dpc-web/app/views/shared/_footer.html.erb
+++ b/dpc-web/app/views/shared/_footer.html.erb
@@ -1,13 +1,22 @@
 <footer class="ds-base ds-u-fill--white ds-u-padding-y--6 site-footer" role="contentinfo">
   <div class="ds-l-container">
     <div class="ds-l-row">
-      <div class="ds-u-font-size--small ds-l-col--12 ds-l-sm-col--6 ds-l-md-col--6 ds-u-margin-bottom--2">
+      <div class="ds-u-font-size--small ds-l-col--12 ds-l-sm-col--12 ds-l-lg-col--3 ds-u-margin-bottom--2">
         <div class="ds-u-float--left ds-u-margin-right--2">
           <%= render partial: 'shared/hhs-logo' %>
         </div>
-        A federal government website managed by the Centers for Medicare &amp; Medicaid Services 7500 Security Boulevard, Baltimore, MD 21124
+        <p class="ds-u-margin-top--0 ds-u-measure--wide">A federal government website managed by the Centers for Medicare &amp; Medicaid Services 7500 Security Boulevard, Baltimore, MD 21124</p>
       </div>
-      <div class="ds-l-col--12 ds-l-sm-col--6 ds-l-md-col--3 ds-u-margin-bottom--2">
+      <div class="ds-l-col--12 ds-l-sm-col--4 ds-l-lg-col--3 ds-u-margin-bottom--2">
+        <h2 class="ds-h4">Data at the Point of Care</h2>
+        <ul class="ds-c-list ds-c-list--bare ds-u-font-size--small">
+          <li><%= link_to "Documentation", docs_path %></li>
+          <li><%= link_to "Frequently asked questions", faq_path %></li>
+          <li><a target="_blank" href="https://github.com/CMSgov/dpc-app">DPC on GitHub</a></li>
+          <li><a target="_blank" href="https://groups.google.com/d/forum/dpc-api">DPC Google Group</a></li>
+        </ul>
+      </div>
+      <div class="ds-l-col--12 ds-l-sm-col--4 ds-l-lg-col--3 ds-u-margin-bottom--2">
         <h2 class="ds-h4">CMS &amp; HHS Websites</h2>
         <ul class="ds-c-list ds-c-list--bare ds-u-font-size--small">
           <li><a target="_blank" href="https://www.cms.gov/">CMS.gov</a></li>
@@ -18,7 +27,7 @@
           <li><a target="_blank" href="https://www.hhs.gov/">HHS.gov</a></li>
         </ul>
       </div>
-      <div class="ds-l-col--12 ds-l-sm-col--6 ds-l-md-col--3 ds-u-margin-bottom--2">
+      <div class="ds-l-col--12 ds-l-sm-col--4 ds-l-lg-col--3 ds-u-margin-bottom--2">
         <h2 class="ds-h4">Additional resources</h2>
         <ul class="ds-c-list ds-c-list--bare ds-u-font-size--small">
           <li><a target="_blank" href="https://design.cms.gov/">CMS Design System</a></li>
