--- a/dpc-web/app/views/public/home.html.erb
+++ b/dpc-web/app/views/public/home.html.erb
@@ -224,3 +224,13 @@ http://hl7.org/fhir/us/bulkdata/2019May/index.html">Bulk FHIR specification</a>.
     </div>
   </section>
 </main>
+
+<div class="ds-c-dialog-wrap" aria-labelledby="dialog-title" aria-hidden="true" role="dialog" id="filter-modal">
+  <div class="ds-c-dialog ds-c-dialog--full" role="document">
+    <header class="ds-c-dialog__header" role="banner">
+      <button class="ds-c-button ds-c-button--transparent ds-c-dialog__close" aria-label="Close modal dialog">Close</button>
+    </header>
+
+
+  </div>
+</div>
