--- a/dpc-web/app/views/internal/organizations/show.html.erb
+++ b/dpc-web/app/views/internal/organizations/show.html.erb
@@ -21,7 +21,7 @@
 
   <section>
     <div class="ds-u-color--success">
-      <% @organization.api_environments.each do |api_env| %>
+      <% @organization.api_environment_strings.each do |api_env| %>
         <svg class="icon ds-u-margin-right--1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <use xlink:href="/assets/solid.svg#database"></use>
         </svg>
@@ -51,6 +51,13 @@
           <use xlink:href="/assets/solid.svg#users"></use>
         </svg>
         <%= @organization.num_providers %> providers
+      </div>
+
+      <div class="ds-u-margin-bottom--1">
+        <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <use xlink:href="/assets/solid.svg#id-card"></use>
+        </svg>
+        <%= @organization.npi %>
       </div>
 
     </div>
