--- a/dpc-web/app/views/public/_hero.html.erb
+++ b/dpc-web/app/views/public/_hero.html.erb
@@ -19,7 +19,7 @@
           Request access</a>
           <% end %>
 
-          <button type="button" id="filter-modal-trigger" class="ds-c-button ds-c-button--inverse ds-c-button--inverse--alt ds-c-button--big" data-modal-show="filter-modal" data-test="filter-modal-trigger">
+          <button type="button" id="filter-modal-trigger" class="ds-c-button ds-c-button--inverse ds-c-button--inverse--alt ds-c-button--big" data-modal-show="filter-modal">
             <svg class="ds-u-margin-right--1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <use xlink:href="/assets/solid.svg#play"></use>
             </svg>Watch the video
