--- a/dpc-web/app/views/public/home.html.erb
+++ b/dpc-web/app/views/public/home.html.erb
@@ -226,10 +226,13 @@ http://hl7.org/fhir/us/bulkdata/2019May/index.html">Bulk FHIR specification</a>.
 </main>
 
 <div class="ds-c-dialog-wrap" aria-labelledby="dialog-title" aria-hidden="true" role="dialog" id="filter-modal">
-  <div class="ds-c-dialog ds-c-dialog--full" role="document">
+  <div class="ds-c-dialog ds-c-dialog--full ds-u-fill--base" role="document">
     <header class="ds-c-dialog__header" role="banner">
-      <button class="ds-c-button ds-c-button--transparent ds-c-dialog__close" aria-label="Close modal dialog">Close</button>
+      <button class="ds-c-button ds-c-button--transparent ds-c-dialog__close ds-u-color--white" aria-label="Close modal dialog">Close</button>
     </header>
+
+
+      <style>.codegena{position:relative;width:100%;height:0;padding-bottom:56.27198%;}.codegena iframe{position:absolute;top:0;left:0;width:100%;height:100%;}</style><div class="codegena"><iframe width='500' height='294' src="https://www.youtube.com/embed/aGe5rEDv3g8?&theme=dark&autohide=2&modestbranding=1&rel=0&iv_load_policy=3"frameborder="0"></iframe></div>
 
 
   </div>
