Refactor org/endpoint association to has_many
We will want to support many endpoints in the enar future, so let's go
ahead and make that the default in the backend. Still need to make the
UI support it, but that can be another Jira ticket (and maybe by then
we will want to have environment support).

--- a/dpc-web/app/views/internal/organizations/show.html.erb
+++ b/dpc-web/app/views/internal/organizations/show.html.erb
@@ -91,19 +91,17 @@
 
 <section class="box">
     <div class="box__content">
-      <h2 class="box__heading">Fhir Endpoint</h2>
-      <% if @organization.fhir_endpoint %>
+      <h2 class="box__heading">FHIR Endpoint</h2>
+      <% @organization.fhir_endpoints.each do |fhir_endpoint| %>
         <div class="ds-u-margin-bottom--1">
-          Name: <%= @organization.fhir_endpoint.name %>
+          Name: <%= fhir_endpoint.name %>
         </div>
         <div class="ds-u-margin-bottom--1">
-          URI: <%= @organization.fhir_endpoint.uri %>
+          URI: <%= fhir_endpoint.uri %>
         </div>
         <div class="ds-u-margin-bottom--1">
-          Status: <%= @organization.fhir_endpoint.status.titleize %>
+          Status: <%= fhir_endpoint.status.titleize %>
         </div>
-      <% else %>
-      <p>None provided.</p>
       <% end %>
     </div>
 <div>
