--- a/dpc-web/app/views/internal/organizations/show.html.erb
+++ b/dpc-web/app/views/internal/organizations/show.html.erb
@@ -54,9 +54,7 @@
       </div>
 
       <div class="ds-u-margin-bottom--1">
-        <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-          <use xlink:href="/assets/solid.svg#id-card"></use>
-        </svg>
+        <label class="ds-u-margin-right--1 ds-u-color--muted">NPI</label>
         <%= @organization.npi %>
       </div>
 
