--- a/dpc-web/app/views/internal/organizations/_fields.html.erb
+++ b/dpc-web/app/views/internal/organizations/_fields.html.erb
@@ -1,43 +1,122 @@
-<div class="field">
-  <%= f.label :name, class: "ds-c-label" %>
-  <%= f.text_field :name, class: "ds-c-field" %>
-</div>
+<fieldset class="ds-l-row field-group">
+  <div class="ds-l-col--12 ds-l-md-col--3">
+    <legend class="field-group__heading">Details</legend>
+  </div>
 
-<div class="field">
-  <%= f.label :organization_type, class: "ds-c-label" %>
-  <%= f.select :organization_type, organization_types_for_select, {}, class: "ds-c-field" %>
-</div>
+  <div class="ds-l-col--12 ds-l-md-col--9 field-group__fields">
 
-<div class="field">
-  <%= f.label :num_providers, class: "ds-c-label" do %>
-  Number of Providers
-  <span class="ds-c-field__hint">You may use an approximate number.<br/>If organization is a vendor, leave blank.</span>
-  <% end %>
-  <%= f.number_field :num_providers,
-    min: 0, class: "ds-c-field ds-c-field--small" %>
-</div>
+    <div class="field">
+      <%= f.label :name, class: "ds-c-label ds-u-margin-top--0" %>
+      <%= f.text_field :name, class: "ds-c-field" %>
+    </div>
 
-<div>
-  <%= f.fields_for :address do |ff| %>
-    <%= ff.label :street, class: "ds-c-label" %>
-    <%= ff.text_field :street, class: "ds-c-field" %>
+    <div class="field">
+      <%= f.label :organization_type, class: "ds-c-label" %>
+      <%= f.select :organization_type, organization_types_for_select, { include_blank: 'Please select an organization type' }, class: "ds-c-field" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :num_providers, class: "ds-c-label" do %>
+      Number of Providers
+      <span class="ds-c-field__hint">You may use an approximate number.<br/>If organization is a vendor, leave blank.</span>
+      <% end %>
+      <%= f.number_field :num_providers,
+        min: 0, class: "ds-c-field ds-c-field--small" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :npi, "NPI", class: "ds-c-label" %>
+      <%= f.text_field :npi, class: "ds-c-field" %>
+    </div>
+  </div>
+</fieldset>
+
+<fieldset class="ds-l-row field-group">
+  <div class="ds-l-col--12 ds-l-md-col--3">
+    <legend class="field-group__heading">Location</legend>
+  </div>
+
+  <div class="ds-l-col--12 ds-l-md-col--9 field-group__fields">
+    <%= f.fields_for :address do |ff| %>
+      <%= ff.label :address_use, class: "ds-c-label ds-u-margin-top--0" %>
+      <%= ff.select :address_use, address_uses_for_select, { include_blank: 'Please select address use' },  class: "ds-c-field" %>
+
+      <%= ff.label :address_type, class: "ds-c-label" %>
+      <%= ff.select :address_type, address_types_for_select, { include_blank: 'Please select address type' }, class: "ds-c-field" %>
+
+      <%= ff.label :street, class: "ds-c-label" %>
+      <%= ff.text_field :street, class: "ds-c-field" %>
 
 
-    <%= ff.label :street_2, class: "ds-c-label" %>
-    <%= ff.text_field :street_2, class: "ds-c-field" %>
+      <%= ff.label :street_2, class: "ds-c-label" %>
+      <%= ff.text_field :street_2, class: "ds-c-field" %>
 
-    <%= ff.label :city, class: "ds-c-label" %>
-    <%= ff.text_field :city, class: "ds-c-field" %>
+      <%= ff.label :city, class: "ds-c-label" %>
+      <%= ff.text_field :city, class: "ds-c-field" %>
 
-    <%= ff.label :state, class: "ds-c-label" %>
-    <%= ff.select :state, states_for_select, { include_blank: 'Please select' }, class: "ds-c-field" %>
+      <%= ff.label :state, class: "ds-c-label" %>
+      <%= ff.select :state, states_for_select, { include_blank: 'Please select' }, class: "ds-c-field" %>
 
-    <%= ff.label :zip, class: "ds-c-label" %>
-    <%= ff.text_field :zip, class: "ds-c-field" %>
-  <% end %>
-</div>
+      <%= ff.label :zip, class: "ds-c-label" %>
+      <%= ff.text_field :zip, class: "ds-c-field ds-c-field--medium" %>
+    <% end %>
+  </div>
 
-<div class="actions ds-u-margin-top--3">
-  <%= f.submit locals[:button_label], class: "ds-c-button ds-c-button--primary", data: { test: "form-submit" } %>
-  <%= link_to "Cancel", :back, class: "ds-c-button ds-c-button--transparent" %>
+</fieldset>
+
+<fieldset class="ds-l-row field-group">
+  <div class="ds-l-col--12 ds-l-md-col--3">
+    <legend class="field-group__heading">Environments</legend>
+
+  </div>
+
+  <div class="ds-l-col--12 ds-l-md-col--9 field-group__fields">
+    <span class="ds-c-field__hint">Select all that apply. Unselecting all will remove all env access for organization.</span>
+
+    <input name="organization[api_environments][]" value="" hidden>
+
+    <span>
+      <input id="organization_api_environments_sandbox" name="organization[api_environments][]" type="checkbox" value="0" class="ds-c-choice" <%= "checked" if @organization.sandbox_enabled? %> >
+      <label for="organization_api_environments_sandbox">Sandbox</label>
+    </span>
+
+    <span>
+      <input id="organization_api_environments_production" name="organization[api_environments][]" type="checkbox" class="ds-c-choice" disabled>
+      <label for="organization_api_environments_production">Production</label>
+    </span>
+  </div>
+</fieldset>
+
+
+<fieldset class="ds-l-row field-group">
+  <div class="ds-l-col--12 ds-l-md-col--3">
+    <legend class="field-group__heading">FHIR Endpoint</legend>
+
+  </div>
+
+  <div class="ds-l-col--12 ds-l-md-col--9 field-group__fields">
+    <span class="ds-c-field__hint">You are not required to enter FHIR endponts unless the organization is graduating from Sandbox.</span>
+
+    <%= f.fields_for :fhir_endpoints do |ff| %>
+      <%= ff.label :status, class: "ds-c-label" %>
+      <%= ff.select :status, statuses_for_select, {include_blank: true}, class: "ds-c-field" %>
+
+      <%= ff.label :name, class: "ds-c-label" %>
+      <%= ff.text_field :name, class: "ds-c-field" %>
+
+      <%= ff.label :uri, "URI", class: "ds-c-label" %>
+      <%= ff.text_field :uri, class: "ds-c-field" %>
+    <% end %>
+  </div>
+</fieldset>
+
+<div class="ds-l-row actions ds-u-margin-top--3 field-group">
+  <div class="ds-l-col--12 ds-l-md-col--3">
+
+  </div>
+
+  <div class="ds-l-col--12 ds-l-md-col--9 field-group__fields ds-u-border--0">
+    <%= f.submit locals[:button_label], class: "ds-c-button ds-c-button--primary", data: { test: "form-submit" } %>
+    <%= link_to "Cancel", :back, class: "ds-c-button ds-c-button--transparent" %>
+  </div>
 </div>
