--- a/dpc-web/app/views/internal/users/show.html.erb
+++ b/dpc-web/app/views/internal/users/show.html.erb
@@ -27,10 +27,10 @@
           <p>No tags</p>
         <% else %>
           <% @user.taggings.each do |tagging| %>
-            <span class="ds-c-badge ds-u-fill--primary-alt">
+            <span class="site-pills__item site-pills__item--small">
               <%= tagging.tag_name %>
 
-              <%= link_to(internal_tagging_url(tagging), method: :delete, data: {test: "delete-tag-#{tagging.id}"}) do %>
+              <%= link_to(internal_tagging_url(tagging), class: "site-pills__item__button", method: :delete, data: {test: "delete-tag-#{tagging.id}"}) do %>
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                   <use xlink:href="/assets/solid.svg#times"></use>
                 </svg>
