Client token creation and view workflow
* With feature tests
* Remove client token destroy stuff until we're ready to finish it
* Only show client token if api request was successful; figure out
  appropriate error message to show user later

--- a/dpc-web/app/views/client_tokens/new.html.erb
+++ b/dpc-web/app/views/client_tokens/new.html.erb
@@ -13,7 +13,7 @@
       <%= form_tag organization_client_tokens_path(organization_id: params[:organization_id]), method: :post do %>
         <div class="field">
           <%= label_tag :api_environment, "Environment", class: "ds-c-label" %>
-          <%= select_tag :api_environment, params[:api_environment], @organization.api_environment_strings %>
+          <%= select_tag :api_environment, options_for_select(@organization.api_environment_strings, params[:api_environment]), include_blank: true %>
         </div>
 
         <div class="field">
