fix unclosed section

--- a/dpc-web/app/views/internal/organizations/show.html.erb
+++ b/dpc-web/app/views/internal/organizations/show.html.erb
@@ -102,7 +102,7 @@
         </div>
       <% end %>
     </div>
-<div>
+</section>
 
 <section class="ds-u-margin--2">
   <div class="ds-l-row ds-u-justify-content--center">
