--- a/dpc-web/app/views/dashboard/_unassigned_content.html.erb
+++ b/dpc-web/app/views/dashboard/_unassigned_content.html.erb
@@ -1,4 +1,5 @@
-<div class="ds-l-row--12 ds-l-md-col--8">
+<div class="ds-l-row">
+<div class="ds-l-col--12 ds-l-md-col--8">
   <div>
     <span class="ds-c-badge ds-c-badge--warn ds-u-font-size--base">Access requested</span>
   </div>
@@ -11,4 +12,5 @@
     longer than necessary, contact an administrator in the Google Group.
   </p>
   <a class="ds-c-button ds-c-button--primary" href="https://groups.google.com/d/forum/dpc-api">Google Group</a>
+</div>
 </div>
