--- a/dpc-web/app/assets/stylesheets/application.scss
+++ b/dpc-web/app/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@
  @import "settings/font-faces";
  @import "settings/variables";
  @import "base/base";
+ @import "base/typography";
  @import "components/accordions";
  @import "components/alerts";
  @import "components/benefit-prop";
